--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>git</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>git</name>
 	<description>Demo project for Spring Boot GIT</description>
 	<url/>
