--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     </dependencies>
 
 	<build>
+		 <finalName>git</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -63,5 +64,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	
 
 </project>
